# workshopmaterials

./: README.md  main.py  pyproject.toml  replit_zip_error_log.txt  utils.py
data/: taylor_swift_songs.csv
pages/: 01_data_exploration.py  02_regression_explanation.py  03_model_building.py
