[project]
name = "repl-nix-swiftlinearregressiontutorial"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "kaggle>=1.6.17",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "scikit-learn>=1.5.2",
    "streamlit>=1.39.0",
]
